# python-project-template

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  hello.html  index.html  installation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-docs.yml  cd.yml  ci.yml
_modules/: hello.html  index.html
docs/: conf.py  hello.rst  installation.rst
src/my_project/: __init__.py  hello.py
tests/: test_hello.py
