[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my_project"
dynamic = ["version"]
readme = "README.md"
description = "Python project repository template with documentation using sphinx"
dependencies = [
    "numpy",
    "huggingface-hub>=0.23.4",
    "pandas",
    "scikit-learn",
    "rasterio",
    "matplotlib",
    "joblib>=1.3.2",
    "requests",
    "shapely",
    "geopandas",
    "fiona",
]
requires-python = ">=3.8"
authors = [
    {name = "Steven Pestana", email = "spestana@uw.edu"},
]
license = {file = "LICENSE"}


[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pre-commit>=2.17.0",
    "nox",
]
doc = [
    "pandoc",
    "sphinx",
    "furo",
    "myst-parser",
    "nbsphinx",
    "ipykernel",
    "ghp-import",
]

[project.urls]
Homepage = "https://test.pypi.org/project/spestana-python-project-template/#description"
Repository = "https://github.com/spestana/spestana-python-project-template"
Issues = "https://github.com/spestana/spestana-python-project-template/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/planetsca"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/my_project/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]
